# LightSpeed-Extension

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  TESTING.md  export_backend.py  lightspeed_export.py  pyproject.toml
.github/workflows/: release-extension-zip.yml
chrome-extension/: airtable-download.js  background.js  connect-success.js  content.css  content.js  manifest.json  options.html  options.js
